Kubernetes/curlpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curlpod
  namespace: instantaneousgram
spec:
  containers:
  - name: curl
    image: curlimages/curl:7.73.0
    command: [ "sleep", "3600" ]
