Kubernetes/instantaneousgram-apigateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: instantaneousgram-apigateway
  namespace: instantaneousgram
spec:
  replicas: 2
  selector:
    matchLabels:
      app: instantaneousgram-apigateway
  template:
    metadata:
      labels:
        app: instantaneousgram-apigateway
    spec:
      containers:
      - name: instantaneousgram-apigateway
        image: slothh/instantaneousgram-apigatewayservices:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "1"
            memory: "512Mi"
          requests:
            cpu: "0.5"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: instantaneousgram-apigateway
  namespace: instantaneousgram
spec:
  type: LoadBalancer
  selector:
    app: instantaneousgram-apigateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
