Kubernetes/instantaneousgram-authentication.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: instantaneousgram-authentication
  namespace: instantaneousgram
spec:
  replicas: 3
  selector:
    matchLabels:
      app: instantaneousgram-authentication
  template:
    metadata:
      labels:
        app: instantaneousgram-authentication
    spec:
      containers:
      - name: instantaneousgram-authentication
        image: slothh/instantaneousgram-authenticationservices:latest
        ports:
        - containerPort: 80
        resources:
                limits:
                  cpu: "1"
                  memory: "512Mi"
                requests:
                  cpu: "0.5"
                  memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: instantaneousgram-authentication
  namespace: instantaneousgram
spec:
  type: LoadBalancer
  selector:
    app: instantaneousgram-authentication
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
