Kubernetes/instantaneousgram-contentmanagement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: instantaneousgram-contentmanagement
  namespace: instantaneousgram
spec:
  replicas: 3
  selector:
    matchLabels:
      app: instantaneousgram-contentmanagement
  template:
    metadata:
      labels:
        app: instantaneousgram-contentmanagement
    spec:
      containers:
      - name: instantaneousgram-contentmanagement
        image: slothh/instantaneousgram-contentmanagement:latest
        ports:
        - containerPort: 80
        resources:
                limits:
                  cpu: "1"
                  memory: "512Mi"
                requests:
                  cpu: "0.5"
                  memory: "256Mi"
        


---
apiVersion: v1
kind: Service
metadata:
  name: instantaneousgram-contentmanagement
  namespace: instantaneousgram
spec:
  type: LoadBalancer
  selector:
    app: instantaneousgram-contentmanagement
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
