Kubernetes/instantaneousgram-likeandcomment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: instantaneousgram-likeandcomment
  namespace: instantaneousgram
spec:
  replicas: 3
  selector:
    matchLabels:
      app: instantaneousgram-likeandcomment
  template:
    metadata:
      labels:
        app: instantaneousgram-likeandcomment
    spec:
      containers:
      - name: instantaneousgram-likeandcomment
        image: slothh/instantaneousgram-likeandcommentservices:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 250m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: instantaneousgram-likeandcomment
  namespace: instantaneousgram
spec:
  type: LoadBalancer
  selector:
    app: instantaneousgram-likeandcomment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
