Kubernetes/instantaneousgram-userprofile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: instantaneousgram-userprofile
  namespace: instantaneousgram
spec:
  replicas: 2
  selector:
    matchLabels:
      app: instantaneousgram-userprofile
  template:
    metadata:
      labels:
        app: instantaneousgram-userprofile
    spec:
      containers:
      - name: instantaneousgram-userprofile
        image: slothh/instantaneousgram-userprofileservices:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
        livenessProbe:
            httpGet:
              path: /health
              port: 3000
        readinessProbe:
            httpGet:
              path: /ready
              port: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: instantaneousgram-userprofile-clusterip
  namespace: instantaneousgram
spec:
  type: ClusterIP
  selector:
    app: instantaneousgram-userprofile
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
